# ec2-termination-handler-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
resources/: cloud-init-monitor.yml  cloud-init-test.yml  cloud-init.yml  ec2-termination-handler.service
scaffold/: github-ci-permissions.json  single-use-aws-setup.sh
src/: imds.rs  main.rs  prometheus.rs
tests/: integration_test.rs
