[package]
name = "ec2-termination-handler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
serde = { version = "1.0.202", features = ["serde_derive"] }
env_logger = "0.11.3"
aws-config = "1.5.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
cargo-deb = "2.2.0"

[package.metadata.deb]
maintainer = "Anne Isabelle Macedo <retpolanne@posteo.net>"
copyright = "2024, Anne Isabelle Macedo <retpolanne@posteo.net>"
section = "utility"
depends = "$auto, systemd"
extended-description = "An EC2 termination handler written in Rust"
license-file = ["LICENSE"]
assets = [
    ["target/release/ec2-termination-handler-rust", "/usr/local/bin", "755"],
    ["resources/ec2-termination-handler.service", "/etc/systemd/system/ec2-termination-handler.service", "644"]
]
