[package]
name = "ec2-termination-handler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
serde = { version = "1.0.202", features = ["serde_derive"] }
env_logger = "0.11.3"
aws-config = "1.5.0"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
aws-sdk-ec2 = "1.44.0"
base64 = "0.22.1"
aws-sdk-ecs = "1.28.0"

[dev-dependencies]
handlebars = "5.1.2"
